[gd_scene load_steps=11 format=3 uid="uid://c7a6cijicq3rd"]

[ext_resource type="Script" uid="uid://btxblnn0xcf64" path="res://scripts/ball.gd" id="1_d73vv"]
[ext_resource type="Script" uid="uid://wytq8piaqmrc" path="res://scripts/SpringPhysics.gd" id="2_ul5l2"]
[ext_resource type="PackedScene" uid="uid://dj3hcfpjf08dc" path="res://scenes/visual_follow_line.tscn" id="3_dqebh"]
[ext_resource type="Script" uid="uid://dvloyvpvwr5sd" path="res://scripts/debug_mode.gd" id="4_dqebh"]
[ext_resource type="PackedScene" uid="uid://dgm0ri1lo1qb7" path="res://scenes/physics_arrows_package.tscn" id="5_2svwt"]
[ext_resource type="AudioStream" uid="uid://cl46ljdk2bbcf" path="res://assets/sfx/bathit.mp3" id="6_lp32b"]
[ext_resource type="AudioStream" uid="uid://hixoeupabdi2" path="res://assets/sfx/pongbounce.mp3" id="7_o1jpy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ig1eg"]
radius = 5.0

[sub_resource type="Gradient" id="Gradient_2svwt"]
offsets = PackedFloat32Array(0.43571427, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b0g53"]
gradient = SubResource("Gradient_2svwt")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.44607842, 0.4509804)

[node name="Ball" type="CharacterBody2D" groups=["Ball"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 3.14159
platform_on_leave = 2
script = ExtResource("1_d73vv")

[node name="PhysicsArrowsPackage" parent="." node_paths=PackedStringArray("body_to_observe") instance=ExtResource("5_2svwt")]
body_to_observe = NodePath("..")
velocity_arrow_multiplier = 0.1
accel_arrow_multiplier = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ig1eg")

[node name="SpringX" type="Node" parent="."]
script = ExtResource("2_ul5l2")
tension = 50.0
damping = 0.0

[node name="SpringY" type="Node" parent="."]
script = ExtResource("2_ul5l2")
tension = 50.0
damping = 0.0

[node name="VisualFollowLine" parent="." instance=ExtResource("3_dqebh")]
wiggle = 0.5

[node name="DebugMode" type="Node" parent="."]
script = ExtResource("4_dqebh")

[node name="Polygon2D" type="Polygon2D" parent="."]
texture = SubResource("GradientTexture2D_b0g53")
texture_offset = Vector2(4.795, 4.585)
polygon = PackedVector2Array(0, -5, 3, -4, 5, 0, 4, 4, 0, 5, -3, 4, -5, 0, -4, -3)

[node name="Sounds" type="Node" parent="."]

[node name="BallHit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_lp32b")

[node name="BallBounce" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_o1jpy")
max_polyphony = 10
